--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "playground-functions",
+  "scripts": {
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jonathan-r-andrade/playground-functions.git"
+  },
+  "author": "Jonathan R. Andrade",
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-trybe-fundamentals": "1.1.0",
@@ -6,11 +15,5 @@
     "eslint-plugin-editorconfig": "2.1.3",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-sonarjs": "0.5.0"
-  },
-  "scripts": {
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx"
-  },
-  "jest": {
-    "rootDir": "./tests/"
   }
 }
